# InventoryManagementSystem

./: CMakeLists.txt  README.md
include/: Algorithms.hpp  Category.hpp  Electronics.hpp  Exceptions.hpp  Grocery.hpp  IDisplayable.hpp  Inventory.hpp  Item.hpp  ItemFactory.hpp  UI.hpp
src/: Electronics.cpp  Grocery.cpp  Inventory.cpp  Item.cpp  ItemFactory.cpp  UI.cpp  main.cpp
tests/: CMakeLists.txt  TestHelpers.hpp  test_task1_items.cpp  test_task2_inventory.cpp  test_task3_smartptrs.cpp  test_task4_algorithms.cpp  test_task5_exceptions.cpp  test_task6_fileio.cpp
